<resources>
    <string name="app_name">Gafuk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Auth -->
    <string name="auth_hello">Привет</string>
    <string name="auth_guest">Гость</string>
    <string name="ask_logout">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="auth_login">Логин</string>
    <string name="auth_logout">Выход из аккаунта</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_remember">Запомнить</string>
    <string name="auth_btn_login">Войти</string>
    <string name="auth_skip">Пропустить</string>

    <!-- Base -->
    <string name="your_profile">Ваш профиль</string>
    <string name="open_link">Открыть ссылку</string>
    <string name="no_network">Нет соединения</string>
    <string name="retry">Повторить</string>
    <string name="delete">Удалить</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="no">Нет</string>
    <string name="follow_link">Перейти по ссылке</string>
    <string name="follow">Перейти</string>
    <string name="share">Поделиться</string>
    <string name="copy_link">Скопировать ссылку</string>
    <string name="open_browser">Открыть в браузере</string>
    <string name="user">Пользователь</string>
    <string name="message">Сообщение</string>
    <string name="other">Прочее</string>
    <string name="default_s">По умолчанию</string>
    <string name="action_select">Выберите действие</string>
    <string name="karma_caption_user">Карма: %s</string>
    <string name="refresh_caption">Обновить</string>
    <string name="logout">Выйти</string>

    <!-- Other -->
    <string name="ask_close_other_tabs">Закрыть остальные вкладки?</string>
    <string name="close_other_fragments">Закрыть остальные</string>

    <!-- test -->
    <string name="test_drawer_item_name">Новости</string>
    <string name="test_nick">Fomich</string>
    <string name="test_auth_nick">Hello, Fomich!</string>
    <string name="test_count_number" translatable="false">250</string>

    <!-- Fragment titles -->
    <string name="fragment_title_auth">Авторизация</string>
    <string name="fragment_title_news_list">Новости</string>
    <string name="fragment_title_blogs_list">Блоги</string>
    <string name="fragment_title_news">Новость</string>
    <string name="fragment_title_blog">Блог</string>
    <string name="fragment_title_history">История</string>
    <string name="fragment_title_dialogs">Диалоги</string>
    <string name="fragment_title_contacts">Контакты</string>
    <string name="fragment_title_users">Пользователи</string>
    <string name="fragment_title_messages">Переписка</string>

    <!-- Preferences/Settings -->
    <string name="title_activity_settings">Настройки</string>

    <string name="pref_title_main">Общие</string>
    <string name="pref_title_news">Настройка новостей</string>
    <string name="pref_title_blogs">Настройка блогов</string>
    <string name="pref_title_notifications">Уведомления</string>
    <string name="pref_title_users">Настройка списка пользователей</string>

    <string name="news_provider">Источник новостей</string>
    <string name="blogs_provider">Источник блогов</string>

    <string name="news_load_on_scroll">Подгружать новости при прокрутке</string>
    <string name="blogs_load_on_scroll">Подгружать блоги при прокрутке</string>
    <string name="users_load_on_scroll">Подгружать пользователей при прокрутке</string>


    <!-- Example settings for Notifications -->


    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
