<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="ru.gafuk.android.settings.SettingsActivity$NewsPreferenceFragment"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/pref_title_news" />

    <header
        android:fragment="ru.gafuk.android.settings.SettingsActivity$BlogPreferenceFragment"
        android:icon="@drawable/ic_blog"
        android:title="@string/pref_title_blogs" />

    <header
        android:fragment="ru.gafuk.android.settings.SettingsActivity$UserPreferenceFragment"
        android:icon="@drawable/ic_users"
        android:title="@string/pref_title_users" />

    <header
        android:fragment="ru.gafuk.android.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_title_notifications" />

</preference-headers>

